ALTER SESSION SET CONTAINER=FREEPDB1;
ALTER SESSION SET CURRENT_SCHEMA = PROJEKT_LF12;

-- ========================
-- DROP BESTEHENDE OBJEKTE
-- ========================

BEGIN
  FOR t IN (
    SELECT table_name FROM user_tables
  ) LOOP
    EXECUTE IMMEDIATE 'DROP TABLE ' || t.table_name || ' CASCADE CONSTRAINTS';
  END LOOP;
END;
/

-- ========================
-- 1. TEILNEHMERSTATUS
-- ========================

CREATE TABLE teilnehmer_status (
    status_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    status_name VARCHAR2(50 CHAR) UNIQUE NOT NULL
);

INSERT INTO teilnehmer_status (status_name) VALUES (UNISTR('Anmeldung unvollst\00E4ndig'));
INSERT INTO teilnehmer_status (status_name) VALUES (UNISTR('Warten auf Angebotsbest\00E4tigung'));
INSERT INTO teilnehmer_status (status_name) VALUES ('Angemeldet');
INSERT INTO teilnehmer_status (status_name) VALUES ('Webinar beendet - Warten auf Rechnungsbegleichung');
INSERT INTO teilnehmer_status (status_name) VALUES ('Rechnung beglichen');
INSERT INTO teilnehmer_status (status_name) VALUES ('Teilgenommen');
INSERT INTO teilnehmer_status (status_name) VALUES ('Erinnerung zur Zahlung gesendet');
INSERT INTO teilnehmer_status (status_name) VALUES ('Storniert');

COMMIT;

-- ========================
-- 2. FIRMA
-- ========================

CREATE TABLE firma (
    firma_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    firma_name VARCHAR2(100 CHAR) NOT NULL,
    rechnungsadresse VARCHAR2(400 CHAR) NOT NULL,
    kommentar VARCHAR2(2000),
    email_rechnungsversand VARCHAR2(100 CHAR) NOT NULL
);

CREATE INDEX idx_firma_email ON firma(email_rechnungsversand);

-- ========================
-- 3. SEMINARAGENDA
-- ========================

CREATE TABLE seminaragenda (
    seminaragenda_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    titel VARCHAR2(255 CHAR) NOT NULL,
    inhalt CLOB NOT NULL,
    erstellungsdatum DATE DEFAULT SYSDATE NOT NULL,
    seminaragenda_version DATE DEFAULT SYSDATE NOT NULL
);

-- ========================
-- 4. KURS
-- ========================

CREATE TABLE kurs (
    kurs_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    kurs_name VARCHAR2(100 CHAR) NOT NULL,
    kurs_typ VARCHAR2(50 CHAR) CHECK (kurs_typ IN ('Webinar', UNISTR('Pr\00E4senz'))) NOT NULL,
    kurs_ort VARCHAR2(100 CHAR) DEFAULT 'online (MS Teams)' NOT NULL,
    kurs_datum_beginn DATE NOT NULL,
    kurs_datum_ende DATE NOT NULL,
    kurs_zeitraum VARCHAR2(100 CHAR) NOT NULL,
    kurs_tage INTEGER NOT NULL,
    kommentar VARCHAR2(2000),
    seminaragenda_id INTEGER,
    CONSTRAINT kurs_unique UNIQUE (kurs_name, kurs_datum_beginn, kurs_datum_ende),
    CONSTRAINT fk_kurs_seminaragenda 
        FOREIGN KEY (seminaragenda_id) 
        REFERENCES seminaragenda(seminaragenda_id) 
        ON DELETE SET NULL
);

CREATE INDEX idx_kurs_seminaragenda ON kurs(seminaragenda_id);

-- ========================
-- 5. ANSPRECHPARTNER
-- ========================

CREATE TABLE ansprechpartner (
    ansprechpartner_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    firma_id INTEGER NOT NULL,
    vorname VARCHAR2(100 CHAR) NOT NULL,
    nachname VARCHAR2(100 CHAR) NOT NULL,
    email VARCHAR2(100 CHAR) NOT NULL,
    telefonnummer VARCHAR2(100 CHAR),
    positionFirma VARCHAR2(100 CHAR),
    CONSTRAINT fk_ansprechpartner_firma 
        FOREIGN KEY (firma_id) 
        REFERENCES firma(firma_id) 
        ON DELETE CASCADE
);

-- ========================
-- 6. TEILNEHMER
-- ========================

CREATE TABLE teilnehmer (
    teilnehmerid INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    firma_id INTEGER NOT NULL,
    vorname VARCHAR2(100 CHAR) NOT NULL,
    nachname VARCHAR2(100 CHAR) NOT NULL,
    email VARCHAR2(100 CHAR) NOT NULL UNIQUE,
    status_id INTEGER DEFAULT 1 NOT NULL,
    CONSTRAINT fk_teilnehmer_firma 
        FOREIGN KEY (firma_id) 
        REFERENCES firma(firma_id) 
        ON DELETE CASCADE,
    CONSTRAINT fk_teilnehmer_status 
        FOREIGN KEY (status_id) 
        REFERENCES teilnehmer_status(status_id)
);

-- ========================
-- 7. KURS_TERMINE
-- ========================

CREATE TABLE kurs_termine (
    terminid INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    kurs_id INTEGER NOT NULL,
    datum DATE NOT NULL,
    uhrzeit_start TIMESTAMP NOT NULL,
    uhrzeit_ende TIMESTAMP NOT NULL,
    CONSTRAINT fk_kurs_termine 
        FOREIGN KEY (kurs_id) 
        REFERENCES kurs(kurs_id) 
        ON DELETE CASCADE
);

-- ========================
-- 8. ANGEBOT
-- ========================

CREATE TABLE angebot (
    angebot_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    firma_id INTEGER NOT NULL,
    kurs_id INTEGER,
    angebot_datum DATE DEFAULT SYSDATE NOT NULL,
    angebot_betrag NUMBER(10,2) NOT NULL,
    angebot_status VARCHAR2(50 CHAR) DEFAULT 'offen' 
        CHECK (angebot_status IN ('offen', 'angenommen', 'abgelehnt', 'storniert')),
    angebot_pdf BLOB,
    CONSTRAINT fk_angebot_firma 
        FOREIGN KEY (firma_id) 
        REFERENCES firma(firma_id) 
        ON DELETE CASCADE,
    CONSTRAINT fk_angebot_kurs 
        FOREIGN KEY (kurs_id) 
        REFERENCES kurs(kurs_id) 
        ON DELETE SET NULL
);

-- ========================
-- 9. RECHNUNG
-- ========================

CREATE TABLE rechnung (
    rechnungsnummer INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    kurs_id INTEGER,
    angebot_id INTEGER,
    firma_id INTEGER NOT NULL,
    rechnungsdatum DATE DEFAULT SYSDATE NOT NULL,
    zahltermin DATE NOT NULL,
    betrag_brutto NUMBER(10,2) CHECK (betrag_brutto >= 0),
    rechnung_status VARCHAR2(50 CHAR) DEFAULT 'offen' 
        CHECK (rechnung_status IN ('offen', 'bezahlt', UNISTR('r\00FCckerstattet'))),
    CONSTRAINT fk_rechnung_firma 
        FOREIGN KEY (firma_id) 
        REFERENCES firma(firma_id) 
        ON DELETE CASCADE,
    CONSTRAINT fk_rechnung_kurs 
        FOREIGN KEY (kurs_id) 
        REFERENCES kurs(kurs_id) 
        ON DELETE SET NULL,
    CONSTRAINT fk_rechnung_angebot 
        FOREIGN KEY (angebot_id) 
        REFERENCES angebot(angebot_id) 
        ON DELETE SET NULL
);

-- ========================
-- 10. ZAHLUNG
-- ========================

CREATE TABLE zahlung (
    zahlung_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    rechnungsnummer INTEGER NOT NULL,
    zahlungsdatum DATE DEFAULT SYSDATE NOT NULL,
    betrag NUMBER(10,2) NOT NULL,
    zahlungsmethode VARCHAR2(50 CHAR) 
        CHECK (zahlungsmethode IN (UNISTR('\00DCberweisung'), 'Kreditkarte', 'PayPal')),
    CONSTRAINT fk_zahlung_rechnung 
        FOREIGN KEY (rechnungsnummer) 
        REFERENCES rechnung(rechnungsnummer) 
        ON DELETE CASCADE
);

CREATE OR REPLACE TRIGGER trg_zahlungsdatum
BEFORE INSERT ON zahlung
FOR EACH ROW
BEGIN
    IF :NEW.zahlungsdatum > SYSDATE THEN
        RAISE_APPLICATION_ERROR(-20001, 'Zahlungsdatum darf nicht in der Zukunft liegen.');
    END IF;
END;
/

-- ========================
-- 11. BENACHRICHTIGUNG
-- ========================

CREATE TABLE benachrichtigung (
    benachrichtigung_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    empfaenger_id INTEGER NOT NULL,
    empfaenger_typ VARCHAR2(50 CHAR) 
        CHECK (empfaenger_typ IN ('firma', 'teilnehmer')),
    betreff VARCHAR2(200 CHAR) NOT NULL,
    inhalt CLOB NOT NULL,
    versanddatum TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
    benachrichtigung_status VARCHAR2(50 CHAR) DEFAULT 'geplant' 
        CHECK (benachrichtigung_status IN ('geplant', 'gesendet', 'fehlgeschlagen'))
);
