@startuml ER-Modell
title ER-Modell - LF12 Keyplayers (Oracle 23ai Schema)

hide circle
skinparam linetype ortho

' ===============================
' STAMMDATEN
' ===============================

entity Firma {
  * firma_id : NUMBER <<PK>>
  --
  * firma_name : VARCHAR2(100)
  * rechnungsadresse : VARCHAR2(400)
  * email_rechnungsversand : VARCHAR2(100)
    kommentar : VARCHAR2(2000)
}

entity Ansprechpartner {
  * ansprechpartner_id : NUMBER <<PK>>
  --
  * firma_id : NUMBER <<FK>>
  * vorname : VARCHAR2(100)
  * nachname : VARCHAR2(100)
  * email : VARCHAR2(100)
    telefonnummer : VARCHAR2(100)
    positionFirma : VARCHAR2(100)
}

entity Teilnehmer_Status {
  * status_id : NUMBER <<PK>>
  --
  * status_name : VARCHAR2(50) <<UNIQUE>>
}

entity Teilnehmer {
  * teilnehmerid : NUMBER <<PK>>
  --
  * firma_id : NUMBER <<FK>>
  * status_id : NUMBER <<FK>> = 1
  * vorname : VARCHAR2(100)
  * nachname : VARCHAR2(100)
  * email : VARCHAR2(100) <<UNIQUE>>
}

' ===============================
' KURSE
' ===============================

entity Seminaragenda {
  * seminaragenda_id : NUMBER <<PK>>
  --
  * titel : VARCHAR2(255)
  * inhalt : CLOB
  * erstellungsdatum : DATE
  * seminaragenda_version : DATE
}

entity Kurs {
  * kurs_id : NUMBER <<PK>>
  --
    seminaragenda_id : NUMBER <<FK>>
  * kurs_name : VARCHAR2(100)
  * kurs_typ : VARCHAR2(50) <<CHECK>>
  * kurs_ort : VARCHAR2(100)
  * kurs_datum_beginn : DATE
  * kurs_datum_ende : DATE
  * kurs_zeitraum : VARCHAR2(100)
  * kurs_tage : NUMBER
    kommentar : VARCHAR2(2000)
  --
  <<UNIQUE>> (kurs_name, beginn, ende)
}

entity Kurs_Termine {
  * terminid : NUMBER <<PK>>
  --
  * kurs_id : NUMBER <<FK>>
  * datum : DATE
  * uhrzeit_start : TIMESTAMP
  * uhrzeit_ende : TIMESTAMP
}

' ===============================
' VERTRIEB
' ===============================

entity Angebot {
  * angebot_id : NUMBER <<PK>>
  --
  * firma_id : NUMBER <<FK>>
    kurs_id : NUMBER <<FK>>
  * angebot_datum : DATE
  * angebot_betrag : NUMBER(10,2)
  * angebot_status : VARCHAR2(50) <<CHECK>>
    angebot_pdf : BLOB
}

entity Rechnung {
  * rechnungsnummer : NUMBER <<PK>>
  --
  * firma_id : NUMBER <<FK>>
    kurs_id : NUMBER <<FK>>
    angebot_id : NUMBER <<FK>>
  * rechnungsdatum : DATE
  * zahltermin : DATE
  * betrag_brutto : NUMBER(10,2) <<CHECK >= 0>>
  * rechnung_status : VARCHAR2(50) <<CHECK>>
}

entity Zahlung {
  * zahlung_id : NUMBER <<PK>>
  --
  * rechnungsnummer : NUMBER <<FK>>
  * zahlungsdatum : DATE
  * betrag : NUMBER(10,2)
  * zahlungsmethode : VARCHAR2(50) <<CHECK>>
}

' ===============================
' KOMMUNIKATION
' ===============================

entity Benachrichtigung {
  * benachrichtigung_id : NUMBER <<PK>>
  --
  * empfaenger_id : NUMBER
  * empfaenger_typ : VARCHAR2(50) <<CHECK>>
  * betreff : VARCHAR2(200)
  * inhalt : CLOB
  * versanddatum : TIMESTAMP
  * benachrichtigung_status : VARCHAR2(50) <<CHECK>>
}

' ===============================
' BEZIEHUNGEN
' ===============================

Firma ||--o{ Ansprechpartner : "hat\n(CASCADE)"
Firma ||--o{ Teilnehmer : "beschäftigt\n(CASCADE)"
Firma ||--o{ Angebot : "erhält\n(CASCADE)"
Firma ||--o{ Rechnung : "erhält\n(CASCADE)"

Teilnehmer_Status ||--o{ Teilnehmer : "klassifiziert"

Seminaragenda ||--o{ Kurs : "verwendet\n(SET NULL)"
Kurs ||--o{ Kurs_Termine : "besteht_aus\n(CASCADE)"
Kurs ||--o{ Angebot : "betrifft\n(SET NULL)"
Kurs ||--o{ Rechnung : "abgerechnet_für\n(SET NULL)"

Angebot ||--o{ Rechnung : "führt_zu\n(SET NULL)"
Rechnung ||--o{ Zahlung : "wird_beglichen\n(CASCADE)"

' ===============================
' HINWEISE
' ===============================

note bottom of Benachrichtigung
  Polymorpher Empfänger:
  empfaenger_typ ∈ {'firma', 'teilnehmer'}
  Kein FK — Auflösung in Anwendung
end note

note right of Zahlung
  Trigger trg_zahlungsdatum:
  Zahlungsdatum darf nicht
  in der Zukunft liegen
end note

note bottom of Kurs
  kurs_typ ∈ {'Webinar', 'Präsenz'}
end note

note bottom of Angebot
  angebot_status ∈
   {offen, angenommen,
    abgelehnt, storniert}
end note

note bottom of Rechnung
  rechnung_status ∈
   {offen, bezahlt, rückerstattet}
end note

@enduml
